[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rwkv-api"
version = "0.1.1"
description = "RWKV-Server Task API 的 Python SDK，支持同步/异步双接口和流式 SSE 响应"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "RWKV Contributors" },
]
keywords = ["rwkv", "llm", "api", "sdk", "sse", "streaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/RWKV/RWKV-API"
Repository = "https://github.com/RWKV/RWKV-API"

[tool.hatch.build.targets.wheel]
packages = ["rwkv_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
